# metal-faster-whisper

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Package.swift  README.md  ROADMAP.md  adversarial-test.md
.claude/agents/: adversarial-tester.md  agent-organizer.md  ai-engineer.md  api-designer.md  api-documenter.md  architect.md  backend-architect.md  backend-security-coder.md  bash-pro.md  build-engineer.md  build-error-resolver.md  c-pro.md  cli-developer.md  cloud-architect.md  code-reviewer.md  cpp-pro.md  csharp-pro.md  data-engineer.md  data-researcher.md  data-scientist.md  database-architect.md  database-optimizer.md  database-reviewer.md  debugger.md  dependency-manager.md  deployment-engineer.md  design-system-architect.md  devops-engineer.md  devops-incident-responder.md  devops-troubleshooter.md  django-pro.md  doc-updater.md  docs-architect.md  documentation-pro.md  dotnet-core-pro.md  dotnet-framework-pro.md  dx-optimizer.md  e2e-runner.md  electron-pro.md  elixir-pro.md  (+71 more)
.claude/skills/adversarial-test/: SKILL.md
.claude/templates/: coordination-code.txt  coordination-review.txt  quality-rules-code.txt  quality-rules-review.txt  severity-guide.txt
.claude/tools/: memory.bat  memory.py  memory.sh  spawn-glm.sh  wait-glm.sh  web_search.bat  web_search.sh
.claude/tools/completions/: memory.bash
benchmarks/: python_baselines.json  run_python_baselines.py
cli/: metalwhisper.mm
docs/: API.md  ARC_POLICY.md  MIGRATION.md  PERFORMANCE.md
docs/man/: metalwhisper.1
examples/TranscriberApp/: .gitignore  ContentView.swift  ExportUtils.swift  MetalWhisper-Bridging-Header.h  MetalWhisperApp.swift  README.md  SegmentItem.swift  TranscriptionViewModel.swift  project.yml
examples/swift-cli/: README.md  transcribe.swift
reports/: RELEASE_NOTES.md  adversarial-test-project.md  adversarial-testing-research.md  benchmark-pre-optimization.md  diarization-research.md  e2e-test-report.md  final-code-analysis.md  implementation-comparison.md  m0-report.md  m1-report.md  m10-report.md  m11-report.md  m12-report.md  m2-report.md  m3-report.md  m4-m5-code-analysis.md  m4-report.md  m4.1-report.md  m4.2-report.md  m4.3-report.md  m4.4-report.md  m4.5-report.md  m4.6-report.md  m5-report.md  m6-m7-code-analysis.md  m6-report.md  m7-report.md  m8-code-analysis.md  m8-report.md  m9-m10-code-analysis.md  m9-report.md  pre-m4-code-analysis.md  project-final-status.md  test-audit.md  test-coverage-status.md
scripts/: build_framework.sh  build_release.sh  build_spm_release.sh  build_xcframeworks.sh  codesign_and_notarize.sh  convert_vad_to_coreml.py  entitlements.plist  setup_dependencies.sh
src/: MWAudioDecoder.h  MWAudioDecoder.mm  MWConstants.h  MWFeatureExtractor.h  MWFeatureExtractor.mm  MWHelpers.h  MWHelpers.mm  MWLiveTranscriber.h  MWLiveTranscriber.mm  MWModelManager.h  MWModelManager.mm  MWTokenizer.h  MWTokenizer.mm  MWTranscriber.h  MWTranscriber.mm  MWTranscriberModels.mm  MWTranscriptionOptions.h  MWTranscriptionOptions.mm  MWVoiceActivityDetector.h  MWVoiceActivityDetector.mm  MetalWhisper.h  module.modulemap
tests/: AdversarialTestAudioDecoder.mm  AdversarialTestFeatureExtractor.mm  AdversarialTestTranscriptionOptions.mm  MWTestCommon.h  generate_m2_reference.py  generate_m3_reference.py  generate_m6_reference.py  generate_python_reference.py  generate_reference.py  test_benchmark.mm  test_coverage.mm  test_deferred.mm  test_e2e.mm  test_edge_cases.mm  test_m0_compute_types.mm  test_m0_link.mm  test_m10_api.mm  test_m10_swift.swift  test_m11_validation.mm  test_m1_audio.mm  test_m2_mel.mm  test_m3_tokenizer.mm  test_m4_1_model.mm  test_m4_2_encode.mm  test_m4_3_prompt.mm  test_m4_4_generate.mm  test_m4_5_segments.mm  test_m4_6_transcribe.mm  test_m5_word_timestamps.mm  test_m6_m7_edge_cases.mm  test_m6_vad.mm  test_m7_batched.mm  test_m8_cli.mm  test_m9_model_manager.mm  test_spm.sh  test_swift.swift
tests/data/: jfk.m4a
tests/data/reference/: hotwords_16khz_mono.json  hotwords_16khz_mono.raw  jfk_16khz_mono.json  mel_filters_128.json  mel_filters_128.raw  mel_filters_80.json  mel_physicsworks_30s_128.json  mel_physicsworks_30s_128.raw  mel_physicsworks_30s_80.json  mel_physicsworks_30s_80.raw  mel_short_5s_80.json  mel_short_5s_80.raw  pad_or_trim.json  physicsworks_16khz_mono.json  python_transcription_jfk.json  python_transcription_physicsworks.json  python_transcription_russian_60s.json  stereo_diarization_16khz_mono.json  stereo_diarization_16khz_mono.raw  stereo_diarization_left.raw  stereo_diarization_right.raw  stereo_diarization_split.json  stft_magnitudes_sq.raw  stft_reference.json  stft_test_signal.raw  tokenizer_reference.json  vad_reference.json
